xidlc/src/driver/tests/snapshots/xidlc__driver__tests__cpp_cpp_gen__interface_dcl.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
interface_dcl.cpp
===============
#include "interface_dcl.h"
===============
interface_dcl.h
===============
// Generated by idlc
#pragma once
#include <array>
#include <cstddef>
#include <cstdint>
#include <exception>
#include <map>
#include <memory>
#include <string>
#include <vector>
class HelloWorld;
class HelloWorld {
public:
    virtual ~HelloWorld() = default;


};
class HelloWorld : public Parent {
public:
    virtual ~HelloWorld() = default;


};
class HelloWorld : public Parent1, public Parent2, public Parent3 {
public:
    virtual ~HelloWorld() = default;


};

constexpr int32_t A_func1_Hash = 4091574330;


constexpr int32_t A_func1_Hash = 4091574330;


constexpr int32_t A_Ex_Hash = 1885521279;


constexpr int32_t A_func1_Hash = 4091574330;


constexpr int32_t B_Ex_Hash = 2027314845;


constexpr int32_t C_Ex_Hash = 939024653;


constexpr int32_t A_func1_Hash = 4091574330;


constexpr int32_t A_func1_Hash = 4091574330;


constexpr int32_t A_func1_Hash = 4091574330;


constexpr int32_t A_get_attribute_attr1_Hash = 608996360;


constexpr int32_t A_get_attribute_attr1_Hash = 608996360;


constexpr int32_t A_get_attribute_attr1_Hash = 608996360;


constexpr int32_t A_get_attribute_attr1_Hash = 608996360;


constexpr int32_t A_set_attribute_attr1_Hash = 2553876227;


constexpr int32_t A_get_attribute_attr2_Hash = 2525005575;


constexpr int32_t A_set_attribute_attr2_Hash = 2258850027;


constexpr int32_t A_get_attribute_attr3_Hash = 3118622849;


constexpr int32_t A_set_attribute_attr3_Hash = 700810472;


constexpr int32_t A_get_attribute_attr1_Hash = 608996360;


constexpr int32_t A_set_attribute_attr1_Hash = 2553876227;


constexpr int32_t A_get_attribute_attr1_Hash = 608996360;


constexpr int32_t A_set_attribute_attr1_Hash = 2553876227;


constexpr int32_t A_get_attribute_attr1_Hash = 608996360;


constexpr int32_t A_set_attribute_attr1_Hash = 2553876227;

struct A_func1_In {

    dds::rpc::UnusedMember dummy;

};
struct A_func1_Out {

    dds::rpc::UnusedMember dummy;

};
class A_func1_Result {
public:
    int32_t _d{};

    A_func1_Out result;

};
struct A_func1_In {

    dds::rpc::UnusedMember dummy;

};
struct A_func1_Out {

    dds::rpc::UnusedMember dummy;

};
class A_func1_Result {
public:
    int32_t _d{};

    A_func1_Out result;

    A a_ex;

};
struct A_func1_In {

    dds::rpc::UnusedMember dummy;

};
struct A_func1_Out {

    dds::rpc::UnusedMember dummy;

};
class A_func1_Result {
public:
    int32_t _d{};

    A_func1_Out result;

    A a_ex;

    B b_ex;

    C c_ex;

};
struct A_func1_In {

    u8 attr;

};
struct A_func1_Out {

    u16 attr;

};
class A_func1_Result {
public:
    int32_t _d{};

    A_func1_Out result;

};
struct A_func1_In {

    u8 attr;

};
struct A_func1_Out {

    u16 attr;

};
class A_func1_Result {
public:
    int32_t _d{};

    A_func1_Out result;

    A a_ex;

};
struct A_func1_In {

    u8 attr;

};
struct A_func1_Out {

    u16 attr;

};
class A_func1_Result {
public:
    int32_t _d{};

    A_func1_Out result;

    A a_ex;

    B b_ex;

    C c_ex;

};
struct A_get_attribute_attr1_In {

    dds::rpc::UnusedMember dummy;

};
struct A_get_attribute_attr1_Out {

    u8 return_;

};
class A_get_attribute_attr1_Result {
public:
    int32_t _d{};

    A_get_attribute_attr1_Out result;

};
struct A_get_attribute_attr1_In {

    dds::rpc::UnusedMember dummy;

};
struct A_get_attribute_attr1_Out {

    u8 return_;

};
class A_get_attribute_attr1_Result {
public:
    int32_t _d{};

    A_get_attribute_attr1_Out result;

};
struct A_get_attribute_attr1_In {

    dds::rpc::UnusedMember dummy;

};
struct A_get_attribute_attr1_Out {

    u8 return_;

};
class A_get_attribute_attr1_Result {
public:
    int32_t _d{};

    A_get_attribute_attr1_Out result;

};
struct A_get_attribute_attr1_In {

    dds::rpc::UnusedMember dummy;

};
struct A_get_attribute_attr1_Out {

    u8 return_;

};
class A_get_attribute_attr1_Result {
public:
    int32_t _d{};

    A_get_attribute_attr1_Out result;

};
struct A_set_attribute_attr1_In {

    u8 attr1;

};
struct A_set_attribute_attr1_Out {

    dds::rpc::UnusedMember dummy;

};
class A_set_attribute_attr1_Result {
public:
    int32_t _d{};

    A_set_attribute_attr1_Out result;

};
struct A_get_attribute_attr2_In {

    dds::rpc::UnusedMember dummy;

};
struct A_get_attribute_attr2_Out {

    u8 return_;

};
class A_get_attribute_attr2_Result {
public:
    int32_t _d{};

    A_get_attribute_attr2_Out result;

};
struct A_set_attribute_attr2_In {

    u8 attr2;

};
struct A_set_attribute_attr2_Out {

    dds::rpc::UnusedMember dummy;

};
class A_set_attribute_attr2_Result {
public:
    int32_t _d{};

    A_set_attribute_attr2_Out result;

};
struct A_get_attribute_attr3_In {

    dds::rpc::UnusedMember dummy;

};
struct A_get_attribute_attr3_Out {

    u8 return_;

};
class A_get_attribute_attr3_Result {
public:
    int32_t _d{};

    A_get_attribute_attr3_Out result;

};
struct A_set_attribute_attr3_In {

    u8 attr3;

};
struct A_set_attribute_attr3_Out {

    dds::rpc::UnusedMember dummy;

};
class A_set_attribute_attr3_Result {
public:
    int32_t _d{};

    A_set_attribute_attr3_Out result;

};
struct A_get_attribute_attr1_In {

    dds::rpc::UnusedMember dummy;

};
struct A_get_attribute_attr1_Out {

    u8 return_;

};
class A_get_attribute_attr1_Result {
public:
    int32_t _d{};

    A_get_attribute_attr1_Out result;

    A a_ex;

};
struct A_set_attribute_attr1_In {

    u8 attr1;

};
struct A_set_attribute_attr1_Out {

    dds::rpc::UnusedMember dummy;

};
class A_set_attribute_attr1_Result {
public:
    int32_t _d{};

    A_set_attribute_attr1_Out result;

};
struct A_get_attribute_attr1_In {

    dds::rpc::UnusedMember dummy;

};
struct A_get_attribute_attr1_Out {

    u8 return_;

};
class A_get_attribute_attr1_Result {
public:
    int32_t _d{};

    A_get_attribute_attr1_Out result;

    A a_ex;

    B b_ex;

    C c_ex;

};
struct A_set_attribute_attr1_In {

    u8 attr1;

};
struct A_set_attribute_attr1_Out {

    dds::rpc::UnusedMember dummy;

};
class A_set_attribute_attr1_Result {
public:
    int32_t _d{};

    A_set_attribute_attr1_Out result;

    A a_ex;

};
struct A_get_attribute_attr1_In {

    dds::rpc::UnusedMember dummy;

};
struct A_get_attribute_attr1_Out {

    u8 return_;

};
class A_get_attribute_attr1_Result {
public:
    int32_t _d{};

    A_get_attribute_attr1_Out result;

};
struct A_set_attribute_attr1_In {

    u8 attr1;

};
struct A_set_attribute_attr1_Out {

    dds::rpc::UnusedMember dummy;

};
class A_set_attribute_attr1_Result {
public:
    int32_t _d{};

    A_set_attribute_attr1_Out result;

    A a_ex;

};
class A_Call {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    A_func1_In func1;

    A_get_attribute_attr1_In get_attribute_attr1;

    A_set_attribute_attr1_In set_attribute_attr1;

    A_get_attribute_attr2_In get_attribute_attr2;

    A_set_attribute_attr2_In set_attribute_attr2;

    A_get_attribute_attr3_In get_attribute_attr3;

    A_set_attribute_attr3_In set_attribute_attr3;

};
struct A_Request {

    dds::rpc::RequestHeader header;

    A_Call data;

};
class A_Return {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    A_func1_Result func1;

    A_get_attribute_attr1_Result get_attribute_attr1;

    A_set_attribute_attr1_Result set_attribute_attr1;

    A_get_attribute_attr2_Result get_attribute_attr2;

    A_set_attribute_attr2_Result set_attribute_attr2;

    A_get_attribute_attr3_Result get_attribute_attr3;

    A_set_attribute_attr3_Result set_attribute_attr3;

};
struct A_Reply {

    dds::rpc::ReplyHeader header;

    A_Return data;

};
class A : public B, public C, public D {
public:
    virtual ~A() = default;

    virtual void func1() = 0;

    virtual void func1() = 0;

    virtual void func1() = 0;

    virtual void func1(const u8& attr, u16& attr) = 0;

    virtual void func1(const u8& attr, u16& attr) = 0;

    virtual void func1(const u8& attr, u16& attr) = 0;

    virtual const u8& attr1() const = 0;

    virtual const u8& attr1() const = 0;

    virtual const u8& attr1() const = 0;

    virtual const u8& attr1() const = 0;

    virtual void attr1(const u8& value) = 0;

    virtual const u8& attr2() const = 0;

    virtual void attr2(const u8& value) = 0;

    virtual const u8& attr3() const = 0;

    virtual void attr3(const u8& value) = 0;

    virtual const u8& attr1() const = 0;

    virtual void attr1(const u8& value) = 0;

    virtual const u8& attr1() const = 0;

    virtual void attr1(const u8& value) = 0;

    virtual const u8& attr1() const = 0;

    virtual void attr1(const u8& value) = 0;


};

constexpr int32_t A_opA_Hash = 3927698569;

struct A_opA_In {

    L1 l_1;

};
struct A_opA_Out {

    int16_t return_;

};
class A_opA_Result {
public:
    int32_t _d{};

    A_opA_Out result;

};
class A_Call {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    A_opA_In opA;

};
struct A_Request {

    dds::rpc::RequestHeader header;

    A_Call data;

};
class A_Return {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    A_opA_Result opA;

};
struct A_Reply {

    dds::rpc::ReplyHeader header;

    A_Return data;

};
class A {
public:
    virtual ~A() = default;

    virtual int16_t opA(const L1& l_1) = 0;


    using L1 = int32_t;

    

    constexpr int a = 10;

    class A : public std::exception {

    public:

        A() = default;

        const char* what() const noexcept override { return ""; }

    

        int a;

    

    };

};
