xidlc/src/driver/tests/snapshots/xidlc__driver__tests__cpp_cpp_gen__misc.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
misc.cpp
===============
#include "misc.h"
===============
misc.h
===============
// Generated by idlc
#pragma once
#include <array>
#include <cstddef>
#include <cstdint>
#include <exception>
#include <map>
#include <memory>
#include <string>
#include <vector>
enum class Color {

    red,

    green,

    blue

};

constexpr Color FAVORITE_COLOR = red;

enum class Size {

    small,

    medium,

    large

};

constexpr M::Size MYSIZE = M::medium;


constexpr Color col = red;


constexpr Color another = M::medium;

struct Foo;
struct Foo {

    int32_t value;

    FooSeq chain;

};
class Bar;
struct Foo {

    double d_mem;

    BarSeq nested;

};
class Bar {
public:
    int32_t _d{};

    int32_t l_mem;

    Foo s_mem;

};
class A {
public:
    virtual ~A() = default;


};
class B : public A {
public:
    virtual ~B() = default;


};
class C : public A {
public:
    virtual ~C() = default;


};
class D : public B, public C {
public:
    virtual ~D() = default;


};
class E : public A, public B {
public:
    virtual ~E() = default;


};

constexpr int32_t A_make_it_so_Hash = 4027367364;

struct A_make_it_so_In {

    dds::rpc::UnusedMember dummy;

};
struct A_make_it_so_Out {

    dds::rpc::UnusedMember dummy;

};
class A_make_it_so_Result {
public:
    int32_t _d{};

    A_make_it_so_Out result;

};
class A_Call {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    A_make_it_so_In make_it_so;

};
struct A_Request {

    dds::rpc::RequestHeader header;

    A_Call data;

};
class A_Return {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    A_make_it_so_Result make_it_so;

};
struct A_Reply {

    dds::rpc::ReplyHeader header;

    A_Return data;

};
class A {
public:
    virtual ~A() = default;

    virtual void make_it_so() = 0;


};

constexpr int32_t B_make_it_so_Hash = 4027367364;

struct B_make_it_so_In {

    int32_t times;

};
struct B_make_it_so_Out {

    int16_t return_;

};
class B_make_it_so_Result {
public:
    int32_t _d{};

    B_make_it_so_Out result;

};
class B_Call {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    B_make_it_so_In make_it_so;

};
struct B_Request {

    dds::rpc::RequestHeader header;

    B_Call data;

};
class B_Return {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    B_make_it_so_Result make_it_so;

};
struct B_Reply {

    dds::rpc::ReplyHeader header;

    B_Return data;

};
class B : public A {
public:
    virtual ~B() = default;

    virtual int16_t make_it_so(int32_t times) = 0;


};
class base;
class derived : public base {
public:
    virtual ~derived() = default;


};
class base {
public:
    virtual ~base() = default;


};
class derived : public base {
public:
    virtual ~derived() = default;


};

constexpr int32_t A_opA_Hash = 3927698569;

struct A_opA_In {

    L1 l_1;

};
struct A_opA_Out {

    int16_t return_;

};
class A_opA_Result {
public:
    int32_t _d{};

    A_opA_Out result;

};
class A_Call {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    A_opA_In opA;

};
struct A_Request {

    dds::rpc::RequestHeader header;

    A_Call data;

};
class A_Return {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    A_opA_Result opA;

};
struct A_Reply {

    dds::rpc::ReplyHeader header;

    A_Return data;

};
class A {
public:
    virtual ~A() = default;

    virtual int16_t opA(const L1& l_1) = 0;


    using L1 = int32_t;

};

constexpr int32_t B_opB_Hash = 772252025;

struct B_opB_In {

    int32_t l;

};
struct B_opB_Out {

    L1 return_;

};
class B_opB_Result {
public:
    int32_t _d{};

    B_opB_Out result;

};
class B_Call {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    B_opB_In opB;

};
struct B_Request {

    dds::rpc::RequestHeader header;

    B_Call data;

};
class B_Return {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    B_opB_Result opB;

};
struct B_Reply {

    dds::rpc::ReplyHeader header;

    B_Return data;

};
class B {
public:
    virtual ~B() = default;

    virtual L1 opB(int32_t l) = 0;


    using L1 = int16_t;

};

constexpr int32_t C_opC_Hash = 1200187224;

struct C_opC_In {

    L3 l_3;

};
struct C_opC_Out {

    B::L1 return_;

};
class C_opC_Result {
public:
    int32_t _d{};

    C_opC_Out result;

};
class C_Call {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    C_opC_In opC;

};
struct C_Request {

    dds::rpc::RequestHeader header;

    C_Call data;

};
class C_Return {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    C_opC_Result opC;

};
struct C_Reply {

    dds::rpc::ReplyHeader header;

    C_Return data;

};
class C : public B, public A {
public:
    virtual ~C() = default;

    virtual B::L1 opC(const L3& l_3) = 0;


    using L2 = L1;

    using L3 = A::L1;

};

constexpr int32_t L = 3;


constexpr int32_t A_f_Hash = 3712786831;

struct A_f_In {

    coord s;

};
struct A_f_Out {

    dds::rpc::UnusedMember dummy;

};
class A_f_Result {
public:
    int32_t _d{};

    A_f_Out result;

};
class A_Call {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    A_f_In f;

};
struct A_Request {

    dds::rpc::RequestHeader header;

    A_Call data;

};
class A_Return {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    A_f_Result f;

};
struct A_Reply {

    dds::rpc::ReplyHeader header;

    A_Return data;

};
class A {
public:
    virtual ~A() = default;

    virtual void f(const coord& s) = 0;


    using coord = std::array<double, 1>;

};
class B {
public:
    virtual ~B() = default;


    

    constexpr int32_t L = 4;

};
class C : public B, public A {
public:
    virtual ~C() = default;


};
class A {
public:
    virtual ~A() = default;


    using string_t = std::string;

};
class B {
public:
    virtual ~B() = default;


    using string_t = std::string;

};

constexpr int32_t C_get_attribute_Title_Hash = 2561239307;


constexpr int32_t C_set_attribute_Title_Hash = 601397578;


constexpr int32_t C_get_attribute_Name_Hash = 1786101153;


constexpr int32_t C_set_attribute_Name_Hash = 2852545551;


constexpr int32_t C_get_attribute_City_Hash = 3564363613;


constexpr int32_t C_set_attribute_City_Hash = 1017480313;

struct C_get_attribute_Title_In {

    dds::rpc::UnusedMember dummy;

};
struct C_get_attribute_Title_Out {

    string_t return_;

};
class C_get_attribute_Title_Result {
public:
    int32_t _d{};

    C_get_attribute_Title_Out result;

};
struct C_set_attribute_Title_In {

    string_t Title;

};
struct C_set_attribute_Title_Out {

    dds::rpc::UnusedMember dummy;

};
class C_set_attribute_Title_Result {
public:
    int32_t _d{};

    C_set_attribute_Title_Out result;

};
struct C_get_attribute_Name_In {

    dds::rpc::UnusedMember dummy;

};
struct C_get_attribute_Name_Out {

    A::string_t return_;

};
class C_get_attribute_Name_Result {
public:
    int32_t _d{};

    C_get_attribute_Name_Out result;

};
struct C_set_attribute_Name_In {

    A::string_t Name;

};
struct C_set_attribute_Name_Out {

    dds::rpc::UnusedMember dummy;

};
class C_set_attribute_Name_Result {
public:
    int32_t _d{};

    C_set_attribute_Name_Out result;

};
struct C_get_attribute_City_In {

    dds::rpc::UnusedMember dummy;

};
struct C_get_attribute_City_Out {

    B::string_t return_;

};
class C_get_attribute_City_Result {
public:
    int32_t _d{};

    C_get_attribute_City_Out result;

};
struct C_set_attribute_City_In {

    B::string_t City;

};
struct C_set_attribute_City_Out {

    dds::rpc::UnusedMember dummy;

};
class C_set_attribute_City_Result {
public:
    int32_t _d{};

    C_set_attribute_City_Out result;

};
class C_Call {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    C_get_attribute_Title_In get_attribute_Title;

    C_set_attribute_Title_In set_attribute_Title;

    C_get_attribute_Name_In get_attribute_Name;

    C_set_attribute_Name_In set_attribute_Name;

    C_get_attribute_City_In get_attribute_City;

    C_set_attribute_City_In set_attribute_City;

};
struct C_Request {

    dds::rpc::RequestHeader header;

    C_Call data;

};
class C_Return {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    C_get_attribute_Title_Result get_attribute_Title;

    C_set_attribute_Title_Result set_attribute_Title;

    C_get_attribute_Name_Result get_attribute_Name;

    C_set_attribute_Name_Result set_attribute_Name;

    C_get_attribute_City_Result get_attribute_City;

    C_set_attribute_City_Result set_attribute_City;

};
struct C_Reply {

    dds::rpc::ReplyHeader header;

    C_Return data;

};
class C : public A, public B {
public:
    virtual ~C() = default;

    virtual const string_t& Title() const = 0;

    virtual void Title(const string_t& value) = 0;

    virtual const A::string_t& Name() const = 0;

    virtual void Name(const A::string_t& value) = 0;

    virtual const B::string_t& City() const = 0;

    virtual void City(const B::string_t& value) = 0;


};
