xidlc/src/driver/tests/snapshots/xidlc__driver__tests__cpp_cpp_gen__module_dcl.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
module_dcl.cpp
===============
/* Generated by xidlc
* xidlc_version: 0.1.0
* xidlc_timestamp: 1970-01-01 00:00
*/
#include "module_dcl.h"
===============
module_dcl.h
===============
/* Generated by xidlc
 * xidlc_version: 0.1.0
 * xidlc_timestamp: 1970-01-01 00:00
 */

#ifndef MODULE_DCL.H
#define MODULE_DCL.H
#include "xidl_xcdr.hpp"
#include <array>
#include <cstddef>
#include <cstdint>
#include <exception>
#include <map>
#include <memory>
#include <string>
#include <vector>

constexpr u8 a = 10;

struct B;

#endif
