xidlc/src/driver/tests/snapshots/xidlc__driver__tests__cpp_cpp_gen__preproc.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
preproc.cpp
===============
#include "preproc.h"
===============
preproc.h
===============
// Generated by idlc
#pragma once
#include <array>
#include <cstddef>
#include <cstdint>
#include <exception>
#include <map>
#include <memory>
#include <string>
#include <vector>
