xidlc/src/driver/tests/snapshots/xidlc__driver__tests__cpp_cpp_gen__struct_empty.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
struct_empty.cpp
===============
#include "struct_empty.h"
===============
struct_empty.h
===============
// Generated by idlc
#pragma once
#include "xidl_xcdr.hpp"
#include <array>
#include <cstddef>
#include <cstdint>
#include <exception>
#include <map>
#include <memory>
#include <string>
#include <vector>
