xidlc/src/driver/tests/snapshots/xidlc__driver__tests__cpp_cpp_gen__struct_simple.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
struct_simple.cpp
===============
/* Generated by xidlc
* xidlc_version: 0.1.0
* xidlc_timestamp: 1970-01-01 00:00
*/
#include "struct_simple.h"
===============
struct_simple.h
===============
/* Generated by xidlc
 * xidlc_version: 0.1.0
 * xidlc_timestamp: 1970-01-01 00:00
 */

#ifndef STRUCT_SIMPLE.H
#define STRUCT_SIMPLE.H
#include "xidl_xcdr.hpp"
#include <array>
#include <cstddef>
#include <cstdint>
#include <exception>
#include <map>
#include <memory>
#include <string>
#include <vector>

struct A;

#endif
