xidlc/src/driver/tests/snapshots/xidlc__driver__tests__cpp_cpp_gen__template_module_dcl.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
template_module_dcl.cpp
===============
/// Generated by xidlc 0.1.0 at 1970-01-01 00:00.
#include"template_module_dcl.h"
===============
template_module_dcl.h
===============
/// Generated by xidlc 0.1.0 at 1970-01-01 00:00.
#ifndef TEMPLATE_MODULE_DCL_H
#define TEMPLATE_MODULE_DCL_H
#include"xidl_xcdr.hpp"
#include<array>
#include<cstddef>
#include<cstdint>
#include<exception>
#include<map>
#include<memory>
#include<string>
#include<vector>

#endif
