xidlc/src/driver/tests/snapshots/xidlc__driver__tests__cpp_cpp_gen__typedef_dcl.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
typedef_dcl.cpp
===============
#include "typedef_dcl.h"
===============
typedef_dcl.h
===============
// Generated by idlc
#pragma once
#include "xidl_xcdr.hpp"
#include <array>
#include <cstddef>
#include <cstdint>
#include <exception>
#include <map>
#include <memory>
#include <string>
#include <vector>
